# tess2-sys

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  rustfmt.toml
examples/: basic.rs
src/: bindings.rs  lib.rs
