[package]
name = "tess2-sys"
version = "0.1.0"
authors = ["Michal Hornický <semtexzv@gmail.com>"]
build = "build.rs"

[dependencies]
[build-dependencies]
gcc = "0.3"

[package]
description = "FFI definitions and build script for libtess2"
license = "Apache-2.0"
keywords = ["FFI","Polygon","Triangulation"]